# ecgen-cpp

./: .clang-format  .gitpod.Dockerfile  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classecgen_1_1_e_c_gen.html  combin_8hpp.html  combin_8hpp__incl.map  combin_8hpp__incl.md5  combin_8hpp_source.html  combin__old_8hpp.html  combin__old_8hpp__incl.map  combin__old_8hpp__incl.md5  combin__old_8hpp_source.html  diffset.cpp  dir_1118f0e3eb8190ba564eb1b0eee49ae4.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  doc-dev.yml  files.html  graph_legend.html  gray__code_8hpp.html  gray__code_8hpp__incl.map  gray__code_8hpp__incl.md5  gray__code_8hpp_source.html  greeter_8h.html  index.html  iwyu.out  modules.html  namespaceecgen.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html  perm_8hpp.html  (+21 more)
.github/workflows/: install.yml  macos.yml  standalone.bak  standalone.yml  style.bak  test.yml  ubuntu.yml
bench/: BM_EMK.cpp  BM_set_partition.cpp  CMakeLists.txt
documentation/: CMakeLists.txt  conf.py
examples/: CMakeLists.txt  spdlog_example.cpp
experiments/: ThreadPool.h  diffcover2.txt  diffset.cpp  diffset2.cpp  mdiffset  mdiffset.cpp
include/cppcoro/: async_auto_reset_event.hpp  async_generator.hpp  async_latch.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  awaitable_traits.hpp  broken_promise.hpp  cancellation_registration.hpp  cancellation_source.hpp  cancellation_token.hpp  config.hpp  coroutine.hpp  file.hpp  file_buffering_mode.hpp  file_open_mode.hpp  file_read_operation.hpp  file_share_mode.hpp  file_write_operation.hpp  filesystem.hpp  fmap.hpp  generator.hpp  inline_scheduler.hpp  io_service.hpp  is_awaitable.hpp  multi_producer_sequencer.hpp  on_scope_exit.hpp  operation_cancelled.hpp  read_only_file.hpp  read_write_file.hpp  readable_file.hpp  recursive_generator.hpp  resume_on.hpp  round_robin_scheduler.hpp  schedule_on.hpp  sequence_barrier.hpp  sequence_range.hpp  sequence_traits.hpp  shared_task.hpp  single_consumer_async_auto_reset_event.hpp  (+9 more)
include/cppcoro/detail/: any.hpp  get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  manual_lifetime.hpp  remove_rvalue_reference.hpp  sync_wait_task.hpp  unwrap_reference.hpp  void_value.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp  win32.hpp  win32_overlapped_operation.hpp
include/cppcoro/net/: ip_address.hpp  ip_endpoint.hpp  ipv4_address.hpp  ipv4_endpoint.hpp  ipv6_address.hpp  ipv6_endpoint.hpp  socket.hpp  socket_accept_operation.hpp  socket_connect_operation.hpp  socket_disconnect_operation.hpp  socket_recv_from_operation.hpp  socket_recv_operation.hpp  socket_send_operation.hpp  socket_send_to_operation.hpp
include/ecgen/: combin.hpp  combin_old.hpp  gray_code.hpp  greeter.h  greeter.old  perm.hpp  set_bipart.hpp  set_partition.hpp  set_partition_old.hpp  version.h  version.old
search/: all_0.js  all_1.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_1.js  searchdata.js
source/: a.out  combin.cpp  combin_old.cpp  diffcover.txt  diffset.c  diffset2.c  diffset3.c  diffset4.c  gold.txt  golden-117-12.txt  gray_code.cpp  greeter.cpp  greeter.tpp  lyndon.c  necklace  necklace.c  notes.md  perm.cpp  set_bipart.cpp  set_partition.cpp  set_partition_old.cpp  sparse_set.h  test  test2
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  greeter.old  test_combin.cpp  test_combin_edge_cases.cpp  test_combin_old.cpp  test_gray_code.cpp  test_gray_code_edge_cases.cpp  test_perm.cpp  test_perm_edge_cases.cpp  test_set_bipart.cpp  test_set_partition.cpp  test_set_partition_edge_cases.cpp  test_set_partition_old.cpp  test_stress.cpp
test_installed/: CMakeLists.txt
